@@ -92,9 +92,17 @@ def _pretty_needs_read_lock(unbound):
 def %(name)s_read_locked(%(params)s):
     self.lock_read()
     try:
-        return unbound(%(passed_params)s)
-    finally:
+        result = unbound(%(passed_params)s)
+    except:
+        import sys
+        exc_info = sys.exc_info()
+        try:
+            self.unlock()
+        finally:
+            raise exc_info[0], exc_info[1], exc_info[2]
+    else:
         self.unlock()
+        return result
 read_locked = %(name)s_read_locked
 """
     params, passed_params = _get_parameters(unbound)
@@ -127,9 +135,17 @@ def _fast_needs_read_lock(unbound):
     def read_locked(self, *args, **kwargs):
         self.lock_read()
         try:
-            return unbound(self, *args, **kwargs)
-        finally:
+            result = unbound(self, *args, **kwargs)
+        except:
+            import sys
+            exc_info = sys.exc_info()
+            try:
+                self.unlock()
+            finally:
+                raise exc_info[0], exc_info[1], exc_info[2]
+        else:
             self.unlock()
+            return result
     read_locked.__doc__ = unbound.__doc__
     read_locked.__name__ = unbound.__name__
     return read_locked
@@ -141,8 +157,9 @@ def _pretty_needs_write_lock(unbound):
 def %(name)s_write_locked(%(params)s):
     self.lock_write()
     try:
-        result = unbound(self, *args, **kwargs)
+        result = unbound(%(passed_params)s)
     except:
+        import sys
         exc_info = sys.exc_info()
         try:
             self.unlock()
